fix API authentification
